myproject/force-app/main/default/objects/Account/fields/AcctField1__c.field-meta.xml
<CustomField>
    <fullName>AcctField1__c</fullName>
    <label>AcctField1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>