myproject/force-app/main/default/objects/Account/fields/check1__c.field-meta.xml
<CustomField>
    <fullName>check1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>check1</label>
    <type>Checkbox</type>
</CustomField>