myproject/force-app/main/default/objects/Account/fields/MyTextField20__c.field-meta.xml
<CustomField>
    <fullName>MyTextField20__c</fullName>
    <label>MyTextField20</label>
    <length>20</length>
    <type>Text</type>
</CustomField>