myproject/force-app/main/default/objects/Account/fields/MyTextField9__c.field-meta.xml
<CustomField>
    <fullName>MyTextField9__c</fullName>
    <label>MyTextField9</label>
    <length>20</length>
    <type>Text</type>
</CustomField>